@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-04-02T08:19:47Z",
+  "timestamp" : "2022-04-06T16:23:53Z",
   "count_outdated" : 50,
   "uniques_outdated" : 40,
-  "count" : 106,
-  "uniques" : 72,
+  "count" : 98,
+  "uniques" : 67,
   "clones" : [
     {
       "timestamp": "2022-03-23T00:00:00Z",
-      "count": 11,
-      "count_minmax": [ 11, 11 ],
-      "uniques": 7,
-      "uniques_minmax": [ 7, 7 ]
+      "count": 3,
+      "count_minmax": [ 3, 11 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 7 ]
     },
     {
       "timestamp": "2022-03-29T00:00:00Z",
