@@ -1,11 +1,11 @@
 {
-  "count": 56,
-  "uniques": 21,
+  "count": 48,
+  "uniques": 18,
   "clones": [
     {
       "timestamp": "2022-03-23T00:00:00Z",
-      "count": 11,
-      "uniques": 7
+      "count": 3,
+      "uniques": 2
     },
     {
       "timestamp": "2022-03-29T00:00:00Z",
