@@ -1,3 +1,9 @@
+2022-04-06T16:23:53Z:
+* notice: last 14d: all unq: 48 18
+* notice: prev accum: outdated-all outdated-unq / all unq: 50 40 / 106 72
+* notice: next accum: outdated-all outdated-unq / all unq: 50 40 / 98 67
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -5 -8 // +0 +0 / -5 -8
+
 2022-04-02T08:19:47Z:
 * notice: last 14d: all unq: 56 21
 * notice: prev accum: outdated-all outdated-unq / all unq: 50 40 / 96 66
